Changes
=======

All issue numbers are relative to https://github.com/Toblerity/Fiona/issues.

1.10b2 (TBD)
------------

Bug fixes:

- Pyopener registry is not compatible with multithreading (#).
- A CSLConstList ctypedef has been added and is used where appropriate (#1404).
- Fiona model objects have a informative, printable representation again (#).

1.10b1 (2024-04-16)
-------------------

Bug fixes:

- Fiona can again set fields with values that are instances of classes derived
  from date, time, and datetime (#1377).  This was broken by changes in 1.10a2.

1.10a2 (2024-04-05)
-------------------

Deprecations:

- The FIELD_TYPES, FIELD_TYPES_MAP, and FIELD_TYPES_MAP_REV attributes of
  fiona.schema are no longer used by the project and will be removed in version
  2.0 (#1366).
- The Python style of rio-filter expressions introduced in version 1.0 are
  deprecated. Only the parenthesized list type of expression will be supported
  by version 2.0.

New features:

- All supported Fiona field types are now represented by classes in
  fiona.schema. These classes are mapped in FIELD_TYPES_MAP2 and
  FIELD_TYPES_MAP2_REV to OGR field type and field subtype pairs (#1366).
- The filter, map, and reduce CLI commands from the public domain version 1.1.0
  of fio-planet have been incorporated into Fiona's core set of commands
  (#1362).  These commands are only available if pyparsing and shapely (each of
  these are declared in the "calc" set of extra requirements) are installed.

Bug fixes:

- Fiona's python opener VSI plugin prefix has been changed to "vsifiopener" to
  not conflict with Rasterio (#1368).
- Add a 16-bit integer type "int16" based on OGR's OSFTInt16 integer sub-type
  (#1358).
- Allow a GeoJSON collection's layer name to be set on opening in write mode
  (#1352).
- The legacy crs.py module which was shadowed by the new crs.pyx module has
  been deleted (#1344).
- Python 3.8 has been added back to the list of supported versions and