@@ -8,7 +8,11 @@ All issue numbers are relative to https://github.com/Toblerity/Fiona/issues.
 
 Bug fixes:
 
-- Pyopener registry is not compatible with multithreading (#).
+- The Pyopener registry and VSI plugin have been rewritten to avoid filename
+  conflicts and to be compatible with multithreading. Now, a new plugin handler
+  is registered for each instance of using an opener (#1408). Before GDAL 3.9.0
+  plugin handlers cannot not be removed and so it may be observed that the size
+  of the Pyopener registry grows during the execution of a program.
 - A CSLConstList ctypedef has been added and is used where appropriate (#1404).
 - Fiona model objects have a informative, printable representation again (#).
 
